// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataTable Component > matches snapshot with data 1`] = `
"<table class="table-wrapper">
  <thead class="table-wrapper__header">
    <tr>
      <th aria-label="Product category">Electronics</th>
    </tr>
  </thead>
  <tbody class="table-wrapper__body">
    <tr class="row">
      <td><b>Item</b></td>
      <td><b>Price</b></td>
    </tr>
    <tr class="row">
      <td class="name" aria-label="Product name">Product A</td>
      <td class="price" aria-label="Product price"><b>$19.99 USD</b></td>
    </tr>
    <tr class="row">
      <td class="name" aria-label="Product name">Product B</td>
      <td class="price" aria-label="Product price"><b>$29.99 USD</b></td>
    </tr>
    <tr class="row">
      <td class="name" aria-label="Product name">Product C</td>
      <td class="price" aria-label="Product price"><b>$39.99 USD</b></td>
    </tr>
  </tbody>
</table>"
`;

exports[`DataTable Component > matches snapshot with empty data 1`] = `
"<table class="table-wrapper">
  <thead class="table-wrapper__header">
    <tr>
      <th aria-label="Product category">Electronics</th>
    </tr>
  </thead>
  <tbody class="table-wrapper__body">
    <tr class="row">
      <td><b>Item</b></td>
      <td><b>Price</b></td>
    </tr>
  </tbody>
</table>"
`;
